// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={
    Array [
      0.7529411764705882,
      1,
      0.9333333333333333,
      1,
    ]
  }
/>
`;

exports[`2. iconfacebook renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={
    Array [
      0.7529411764705882,
      1,
      0.9333333333333333,
      1,
    ]
  }
/>
`;

exports[`3. iconforwardarrow renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={null}
/>
`;

exports[`4. iconstar renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={
    Array [
      0.7529411764705882,
      1,
      0.9333333333333333,
      1,
    ]
  }
/>
`;

exports[`5. iconcopylink renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={
    Array [
      0.7529411764705882,
      1,
      0.9333333333333333,
      1,
    ]
  }
/>
`;

exports[`6. iconsavebookmark renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={
    Array [
      0.7529411764705882,
      1,
      0.9333333333333333,
      1,
    ]
  }
/>
`;

exports[`7. icontwitter renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={
    Array [
      0.7529411764705882,
      1,
      0.9333333333333333,
      1,
    ]
  }
/>
`;

exports[`8. iconvideo renders with different colours 1`] = `
Array [
  <ARTShape
    fill={
      Array [
        0,
        0.9803921568627451,
        0.792156862745098,
        0.8705882352941177,
        1,
      ]
    }
    stroke={
      Array [
        0.7529411764705882,
        1,
        0.9333333333333333,
        1,
      ]
    }
  />,
  <ARTShape
    fill={
      Array [
        0,
        0.9803921568627451,
        0.792156862745098,
        0.8705882352941177,
        1,
      ]
    }
    stroke={
      Array [
        0.7529411764705882,
        1,
        0.9333333333333333,
        1,
      ]
    }
  />,
]
`;

exports[`9. iconvideo360player renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={
    Array [
      0.7529411764705882,
      1,
      0.9333333333333333,
      1,
    ]
  }
/>
`;

exports[`10. thestlogo renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={
    Array [
      0.7529411764705882,
      1,
      0.9333333333333333,
      1,
    ]
  }
/>
`;

exports[`11. thetimeslogo renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={
    Array [
      0.7529411764705882,
      1,
      0.9333333333333333,
      1,
    ]
  }
/>
`;

exports[`12. closeicon renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      1,
      1,
      1,
      1,
    ]
  }
  stroke={
    Array [
      1,
      1,
      1,
      1,
    ]
  }
/>
`;

exports[`13. iconforwardchevron renders with different colours 1`] = `
<svg>
  <g
    fill="#facade"
  >
    <path />
  </g>
</svg>
`;
